--- a/ProjetoBase2Mantis/packages.config
+++ b/ProjetoBase2Mantis/packages.config
@@ -4,5 +4,6 @@
   <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net461" />
   <package id="Selenium.Chrome.WebDriver" version="2.40" targetFramework="net461" />
   <package id="Selenium.Firefox.WebDriver" version="0.21.0" targetFramework="net461" />
+  <package id="Selenium.Support" version="3.14.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.14.0" targetFramework="net461" />
 </packages>
